# mup-tauri

./: .gitattributes  .gitignore  AGENTS.md  AI_TEAM_STRUCTURE_THAI.md  CHANGELOG.md  Makefile  QUICKSTART.md  README.md  eslint.config.js  package.json  start.bat  start.sh  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
scripts/: build-sidecar.ts
src/: App.tsx  main.tsx  tauri-api-shim.ts  terminal-window.tsx  version.ts
src-node/: config.ts
src-node/orpc/: context.ts  router.ts  server.ts
src-node/services/: agentSession.agentSkillSnapshot.test.ts  agentSession.continueMessageAgentId.test.ts  agentSession.disposeRace.test.ts  agentSession.editMessageId.test.ts  agentSession.postCompactionAttachments.test.ts  agentSession.postCompactionRefresh.test.ts  agentSession.postCompactionRetry.test.ts  agentSession.preStreamError.test.ts  agentSession.resumeStreamEmptyHistory.test.ts  agentSession.ts  coreServices.ts  costTrackingService.test.ts  costTrackingService.ts  iconThemeService.ts  modelHealthService.ts  modelPresetsService.ts  policyService.ts  providerService.ts  serviceContainer.ts  streamManager.ts  workspaceService.test.ts  workspaceService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  mup-server-stub.ts
src-tauri/src/: commands.rs  deeplink.rs  lib.rs  main.rs  orpc_bridge.rs  sidecar.rs  terminal.rs  tray.rs  updater.rs
src/components/: AIView.tsx  AgentModePicker.test.tsx  AgentModePicker.tsx  AgentSelector.tsx  AppLoader.auth.test.tsx  (+72 more)
(+260 files in other folders)
