[package]
name = "mup"
version = "0.17.4"
description = "mux - coder multiplexer"
authors = ["Coder"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tray-icon = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
# Add any dev dependencies here if needed
